--- a/Views/AssetsView.xaml
+++ b/Views/AssetsView.xaml
@@ -50,7 +50,7 @@
                 <TextBlock x:Name="smallHeaderText" Text="Crypto Portfolio Tracker" Foreground="DarkGoldenrod" Margin="36,20,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
                 
                 <TextBlock l:Uids.Uid="Assets_Title" x:Name="txtAssets" Margin="36,10,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
-                <TextBlock Text="{Binding ListAssetTotals.Count, Converter={StaticResource AddPrefixConverter}, ConverterParameter=' (|)' }" 
+                <TextBlock Text="{Binding _assetService.ListAssetTotals.Count, Converter={StaticResource AddPrefixConverter}, ConverterParameter=' (|)' }" 
                     Margin="0,10,0,0" 
                     Foreground="DarkGoldenrod" 
                     Style="{StaticResource SampleHeaderTextStyle}" 
@@ -119,7 +119,9 @@
             <Border Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" VerticalAlignment="Stretch">
                 <Grid Name="AssetsContent">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="{Binding IsExtendedView, Converter={StaticResource BoolToRowDefConverter}, ConverterParameter=122|1*}"/>
+                        <RowDefinition Height="{Binding IsExtendedView, 
+                            Converter={StaticResource BoolToRowDefConverter}, ConverterParameter=122|1*}"/>
+
                         <RowDefinition Height="{Binding IsExtendedView, Converter={StaticResource BoolToRowDefConverter}, ConverterParameter=75|0}"/>
                         <RowDefinition Height="{Binding IsExtendedView, Converter={StaticResource BoolToRowDefConverter}, ConverterParameter=0.7*|0}"/>
                         <RowDefinition Height="Auto"/>
@@ -127,7 +129,9 @@
                     <controls:AssetsListViewControl x:Name="MyAssetsListViewControl" x:FieldModifier="public" Margin="0,0,0,0" Grid.Row="0"  />
                     <controls:AssetAccountsGridViewControl x:Name="MyAssetAccountsGridViewControl" x:FieldModifier="public" Margin="0,-7,0,0" Grid.Row="1" />
                     <controls:AssetTransactionsListViewControl x:Name="MyAssetTransactionsListViewControl" x:FieldModifier="public"  Margin="0,-5,0,0" Grid.Row="2" />
-                    <Button l:Uids.Uid="Assets_TransactionButton" 
+                    <Button 
+                        x:Name="AddTransactionButton"
+                        l:Uids.Uid="Assets_TransactionButton" 
                             Visibility="Visible" 
                             HorizontalAlignment="Stretch" 
                             Margin="10,10,0,0" 
