--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -59,15 +59,15 @@
                         <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE9D2;"/>
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
-                
-                
-                <!--<NavigationViewItem l:Uids.Uid="Navigation_DashBoard" Tag="DashBoardView" >
+
+
+                <NavigationViewItem l:Uids.Uid="Navigation_DashBoard" Tag="DashBoardView" >
                     <NavigationViewItem.Icon>
                         <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xEC4A;"/>
                     </NavigationViewItem.Icon>
-                </NavigationViewItem>-->
-                
-                
+                </NavigationViewItem>
+
+
             </NavigationView.MenuItems>
 
             <NavigationView.FooterMenuItems>
