--- a/Views/AssetsView.xaml
+++ b/Views/AssetsView.xaml
@@ -50,7 +50,7 @@
                 <TextBlock x:Name="smallHeaderText" Text="Crypto Portfolio Tracker" Foreground="DarkGoldenrod" Margin="36,20,0,0" VerticalAlignment="Top" Style="{StaticResource TitleTextBlockStyle}"/>
                 
                 <TextBlock l:Uids.Uid="Assets_Title" x:Name="txtAssets" Margin="36,10,0,0" Foreground="DarkGoldenrod" Style="{StaticResource SampleHeaderTextStyle}" RelativePanel.Below="smallHeaderText" />
-                <TextBlock Text="{Binding _assetService.ListAssetTotals.Count, Converter={StaticResource AddPrefixConverter}, ConverterParameter=' (|)' }" 
+                <TextBlock Text="{Binding _assetService.VisibleAssetsCount, Converter={StaticResource AddPrefixConverter}, ConverterParameter=' (|)' }" 
                     Margin="0,10,0,0" 
                     Foreground="DarkGoldenrod" 
                     Style="{StaticResource SampleHeaderTextStyle}" 
