--- a/Views/DashBoardView.xaml
+++ b/Views/DashBoardView.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="CryptoPortfolioTracker.Views.DashBoardView"
+    x:Class="CryptoPortfolioTracker.Views.DashboardView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 xmlns:models="using:CryptoPortfolioTracker.Models"
